@@ -247,16 +247,6 @@
    <title>Using GNOME Time Tracker</title>
    <sect2 id="working">
       <title>Working with GNOME Time Tracker</title>
-
-<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
-<para>
-<emphasis>
-Notice:  The current version of GTT has many, many new features which are not
-documented in this manual.  A few of the features documented below might work 
-slightly differently in this new version.
-</emphasis>
-</para>
-<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
       <para> <application>GNOME Time Tracker</application> can be
     used to keep track of the amount of time you spend on different
     things you do.  You do this by defining several projects
@@ -309,8 +299,8 @@ slightly differently in this new version.
 The main window consists of five areas. There is a menu bar (see <xref linkend="menubar"/>) and
 a toolbar (see <xref linkend="toolbar"/>) at the top of the window, 
 a status bar (see <xref linkend="statusbar"/>) at the bottom of the window,
- and between the toolbar and the status bar,
- a scrollable project list (see <xref linkend="projects-navigating"/>) and a
+and between the toolbar and the status bar,
+a scrollable project list (see <xref linkend="projects-navigating"/>) and a
 resizable notes area (see <xref linked="notesarea"/>).
       When you start <application>GNOME Time Tracker</application> for
 the first time, the project list area will show you an empty list.
@@ -807,15 +797,6 @@ See <xref linkend="preferences"/> for more information.
 <!-- =============New section============================= --> 
   <sect1 id="preferences" xreflabel="Customization">
       <title>Customization</title> 
-<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
-<para>
-<emphasis>
-Notice:  The current version of GTT has many, many new features which are not
-documented in this manual.  A few of the features documented below might work 
-slightly differently in this new version.
-</emphasis>
-</para>
-<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
       <para>
       To change default settings, select the
       <guimenuitem>Preferences</guimenuitem> command in the
