@@ -1,5 +1,8 @@
 2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>
 
+	* doc/C/gnotime.xml: Removed notes about the manual being outdated
+	since it is now, hopefully, updated.
+
 	* doc/Makefile.am: disabled installation of manual translations
 	since they are outdated
 
